React divided into models, dummy data added

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,5 +3,6 @@
 <head>
 	<meta charset="UTF-8">
 	<title>TestApp</title>
+	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
