--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,3 +6,30 @@
 	text-align:center;
 	font-family: cursive;
 }
+
+.navbar ul{
+	float: right;
+}
+
+.navbar li{
+	float:left;
+	list-style-type: none;
+	// text-align: right;
+	padding: .75rem;
+
+}
+.navbar:after{
+	content:" ";
+	clear:both;
+	display:table;
+}
+
+.voting-option{
+	list-style-type:none;
+	text-align:left;
+}
+
+.poll-list-item{
+	list-style-type: none;
+	text-align:left;
+}
