--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,5 +4,6 @@
 	<meta charset="UTF-8">
 	<title>TestApp</title>
 	<link rel="stylesheet" type="text/css" href="/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display|Ubuntu" rel="stylesheet"> 
 </head>
 <body>
