--- a/public/style.css
+++ b/public/style.css
@@ -70,3 +70,19 @@ p {
 .results-container {
   width: 50%;
   float: right; }
+
+.modal-overlay {
+  position: absolute;
+  background-color: rgba(55, 55, 55, 0.8);
+  width: 100%;
+  height: 100vh;
+  z-index: 10; }
+
+.login-container {
+  text-align: center;
+  background-color: whitesmoke;
+  width: 60%;
+  height: 50vh;
+  margin: auto;
+  margin-top: 15%;
+  z-index: 15; }
