--- a/sass/style.scss
+++ b/sass/style.scss
@@ -95,3 +95,21 @@ p{
 	width:50%;
 	float:right;
 }
+
+.modal-overlay{
+	position:absolute;
+	background-color: rgba(55,55,55,0.8);
+	width:100%;
+	height:100vh;
+	z-index:10;
+}
+
+.login-container{
+	text-align:center;
+	background-color: whitesmoke;
+	width:60%;
+	height:50vh;
+	margin:auto;
+	margin-top: 15%;
+	z-index:15;
+}
