--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,22 @@
 * {
   box-sizing: border-box; }
 
+/* Form reset */
+input,
+label,
+select,
+button,
+textarea {
+  margin: 0;
+  border: 0;
+  padding: 0;
+  display: inline-block;
+  vertical-align: middle;
+  white-space: normal;
+  background: none;
+  line-height: 1; }
+
+/* End reset */
 li {
   list-style-type: none; }
 
@@ -72,9 +88,11 @@ p {
   float: right; }
 
 .btn {
-  background-color: lightgreen;
   border-radius: .5rem;
-  line-height: 2rem; }
+  line-height: 1.5rem;
+  background-color: lightblue;
+  padding: .25rem;
+  height: 2rem; }
 
 /* Login Form Styling */
 .modal-overlay {
