--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,6 +5,28 @@
 }
 
 
+/* Form reset */
+
+input,
+label,
+select,
+button,
+textarea
+{
+	margin:0;
+	border:0;
+	padding:0;
+	display:inline-block;
+	vertical-align:middle;
+	white-space:normal;
+	background:none;
+	line-height:1;
+}
+
+
+
+
+/* End reset */
 li{
 	list-style-type: none;
 }
@@ -97,9 +119,11 @@ p{
 }
 
 .btn{
-	background-color: lightgreen;
-	border-radius:.5rem;
-	line-height:2rem;
+	border-radius: .5rem;
+  	line-height: 1.5rem; 
+  	background-color:lightblue;
+  	padding: .25rem;
+  	height:2rem;
 }
 
 
