--- a/public/style.css
+++ b/public/style.css
@@ -89,10 +89,10 @@ p {
   width: 50%;
   float: right; }
 
-.link, button, nav ul li, .polls-list li {
+.link, button, nav ul li, .polls-list li, input[submit] {
   cursor: pointer; }
 
-.btn {
+button, .btn, input[submit] {
   border-radius: .5rem;
   line-height: 1.5rem;
   background-color: lightblue;
