--- a/sass/style.scss
+++ b/sass/style.scss
@@ -123,11 +123,11 @@ p{
 }
 
 
-.link, button, nav ul li, .polls-list li {
+.link, button, nav ul li, .polls-list li, input[submit] {
 	cursor: pointer;
 }
 
-.btn{
+button, .btn, input[submit]{
 	border-radius: .5rem;
   	line-height: 1.5rem; 
   	background-color:lightblue;
