--- a/sass/style.scss
+++ b/sass/style.scss
@@ -129,11 +129,14 @@ p{
 
 button, .btn, input[submit]{
 	border-radius: .5rem;
-  	line-height: 1.5rem; 
+  	// line-height: 1.5rem; 
   	background-color:lightblue;
   	padding: .25rem;
   	height:2rem;
   	cursor: pointer;
+  	margin-top:1rem;
+  	margin-left:1rem;
+  	margin-right: 1rem;
 }
 
 
@@ -163,6 +166,10 @@ button, .btn, input[submit]{
 		height:2rem;
 		color:lightgray;
 		margin-bottom: 1.5rem;
+		line-height:  2rem;
+    	padding: .5rem;
+        margin-bottom: 1.5rem; 
+   		border: .5px dotted gray;
 	
 		&.btn{
 			color:black;
